--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "express": "^4.18.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AmirMarji/Fall-2022-Class-Notes.git"
