--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   "dependencies": {
     "express": "^4.18.1"
   },
+
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AmirMarji/Fall-2022-Class-Notes.git"
