--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "a repo for all the class work for web programming 2022 (includes Markdown)",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --watch server server/index.js",
+    "start": "node server/index.js"
   },
   "dependencies": {
     "express": "^4.18.1"
