--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "fall-2022-class-notes",
+  "name": "2022web",
   "version": "1.0.0",
-  "description": "a repo for all the class work for web programming 2022 (includes Markdown)",
+  "description": "",
+  "author": "",
+  "license": "ISC",
+
   "scripts": {
     "dev": "nodemon --watch server server/index.js",
     "start": "node server/index.js"
@@ -9,20 +12,16 @@
   "dependencies": {
     "express": "^4.18.1"
   },
-
   "devDependencies": {
     "nodemon": "^2.0.20"
   },
 
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AmirMarji/Fall-2022-Class-Notes.git"
+    "url": "git+https://github.com/jewpaltz/2022-fall-web-dev.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/AmirMarji/Fall-2022-Class-Notes/issues"
+    "url": "https://github.com/jewpaltz/2022-fall-web-dev/issues"
   },
-  "homepage": "https://github.com/AmirMarji/Fall-2022-Class-Notes#readme"
+  "homepage": "https://github.com/jewpaltz/2022-fall-web-dev#readme"
 }
